Backport PR #11976: Fix misaligned icon and checkbox of setting editor (#12009)

--- a/packages/settingeditor/style/base.css
+++ b/packages/settingeditor/style/base.css
@@ -136,6 +136,7 @@
 
 .jp-PluginList button span {
   color: var(--jp-content-font-color1);
+  line-height: var(--jp-cell-collapser-min-height);
 }
 
 .jp-FormComponent li span {
@@ -227,8 +228,16 @@ ul.jp-PluginList li.jp-mod-selected span.jp-PluginList-icon.jp-FileIcon {
   color: var(--jp-content-font-color0);
 }
 
+.jp-SettingsPanel fieldset input[type='checkbox'] {
+  position: relative;
+  top: 2px;
+}
+
 .jp-SettingsPanel .checkbox label {
   cursor: pointer;
+}
+.jp-SettingsPanel .checkbox label:not(:first-child) {
+  margin: 0.5em;
 }
 
 .jp-SettingsPanel button[type='submit'] {
@@ -349,6 +358,7 @@ ul.jp-PluginList li.jp-mod-selected span.jp-PluginList-icon.jp-FileIcon {
   color: var(--jp-ui-font-color1);
   font-weight: 200;
   margin: 1em;
+  line-height: var(--jp-content-font-size3);
 }
 
 .jp-SettingsPanel p {
